// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Icon 2xl renders correctly 1`] = `
<jest>
  <svg
    class="bi icon--2xl"
  >
    <use
      xlink:href="/icons.svg#eye-slash"
    />
  </svg>
</jest>
`;

exports[`OE - Icon 2xs renders correctly 1`] = `
<jest>
  <svg
    class="bi icon--2xs"
  >
    <use
      xlink:href="/icons.svg#eye-slash"
    />
  </svg>
</jest>
`;

exports[`OE - Icon 3xl renders correctly 1`] = `
<jest>
  <svg
    class="bi icon--3xl"
  >
    <use
      xlink:href="/icons.svg#eye-slash"
    />
  </svg>
</jest>
`;

exports[`OE - Icon flip-horizontal renders correctly 1`] = `
<jest>
  <svg
    class="bi icon--s"
  >
    <use
      xlink:href="/icons.svg#eye-slash"
    />
  </svg>
</jest>
`;

exports[`OE - Icon flip-vertical renders correctly 1`] = `
<jest>
  <svg
    class="bi icon--s"
  >
    <use
      xlink:href="/icons.svg#eye-slash"
    />
  </svg>
</jest>
`;

exports[`OE - Icon fluid renders correctly 1`] = `
<jest>
  <svg
    class="bi icon--fluid"
  >
    <use
      xlink:href="/icons.svg#eye-slash"
    />
  </svg>
</jest>
`;

exports[`OE - Icon l renders correctly 1`] = `
<jest>
  <svg
    class="bi icon--l"
  >
    <use
      xlink:href="/icons.svg#eye-slash"
    />
  </svg>
</jest>
`;

exports[`OE - Icon m renders correctly 1`] = `
<jest>
  <svg
    class="bi icon--m"
  >
    <use
      xlink:href="/icons.svg#eye-slash"
    />
  </svg>
</jest>
`;

exports[`OE - Icon rotate-90 renders correctly 1`] = `
<jest>
  <svg
    class="bi icon--s"
  >
    <use
      xlink:href="/icons.svg#eye-slash"
    />
  </svg>
</jest>
`;

exports[`OE - Icon rotate-180 renders correctly 1`] = `
<jest>
  <svg
    class="bi icon--s"
  >
    <use
      xlink:href="/icons.svg#eye-slash"
    />
  </svg>
</jest>
`;

exports[`OE - Icon rotate-270 renders correctly 1`] = `
<jest>
  <svg
    class="bi icon--s"
  >
    <use
      xlink:href="/icons.svg#eye-slash"
    />
  </svg>
</jest>
`;

exports[`OE - Icon s renders correctly 1`] = `
<jest>
  <svg
    class="bi icon--s"
  >
    <use
      xlink:href="/icons.svg#eye-slash"
    />
  </svg>
</jest>
`;

exports[`OE - Icon xl renders correctly 1`] = `
<jest>
  <svg
    class="bi icon--xl"
  >
    <use
      xlink:href="/icons.svg#eye-slash"
    />
  </svg>
</jest>
`;

exports[`OE - Icon xs renders correctly 1`] = `
<jest>
  <svg
    class="bi icon--xs"
  >
    <use
      xlink:href="/icons.svg#eye-slash"
    />
  </svg>
</jest>
`;
